refactor(agent-insights): validate metadata size via bean validation
Replace the imperative metadata byte-size check in the service with a
reusable @MaxJsonSize constraint on the metadata field. Oversized
metadata now fails at the API boundary as 422, consistent with other
payload validation.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>